<resources>
    <string name="app_name">Book My Ticket</string>
    <string name="title_activity_popular__movies">Popular_Movies</string>
    <string name="action_setting">Settings</string>
    <string name="movie_name">Movie Title</string>
    <string name="movie_details">Movie Details</string>
    <string name="plot">Plot Synopsis</string>
    <string name="ratings">User Ratings</string>
    <string name="release">Release Date</string>
    <string name="pref_sort_order_label">Sort Order</string>
    <string name="pref_sort_order_key">sortOrder</string>
    <string name="pref_sort_popular">Most Popular</string>
    <string name="pref_sort_top_rated">Top Rated</string>
    <string name="trailer">Trailer</string>
    <string name="favorite">Favorite Movies</string>
    <string name="title_activity_main">Movies</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Book Ticket</string>
    <string name="nav_header_subtitle">bookticket@book.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="about_us_title">About</string>
    <string name="extra_sending_text">Download app using</string>
    <string name="share_intent">share via</string>
    <string name="fetching_movies">Fetching Movies</string>
    <string name="loading_movies">Loading .....</string>
    <string name="about_version">Version</string>
    <string name="about_us">A book My simple app where  \n is users can book application.</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="_1_0_1">1.0.1</string>
    <string name="last_update">Last Update</string>
    <string name="january_2019">February 2019</string>
    <string name="todo">Back Image</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="signup_now">Signup</string>
    <string name="password">Password</string>
    <string name="emailid">emailID</string>
    <string name="login">Login</string>
    <string name="submit">Submit</string>
    <string name="default_sign_in_button">signin Button</string>
    <string name="custom_sign_in_button">custom Sign in</string>
    <string name="sign_in">sign_in</string>
    <string name="sign_out">sign Out</string>
    <string name="sign_in_with_google_to_book_tickets_easily">Sign in with Google to Book Tickets Easily</string>
    <string name="select_seat">Select Seat</string>
    <string name="movie_names">Movie Name</string>
    <string name="booking_details">Booking Details</string>
    <string name="actual_date">actual_date</string>
    <string name="golden_seats">Golden Seats</string>
    <string name="ticket_details">Ticket Details</string>
    <string name="seatnumber">SeatNumber</string>
    <string name="amount">Amount</string>
    <string name="text">text</string>
    <string name="tax_amount">Tax amount</string>
    <string name="ytt">ytt</string>
    <string name="total_amount">Total Amount</string>
    <string name="theator_name">Theator_name</string>
    <string name="textview">TextView</string>
    <string name="book">Book</string>
    <string name="date">Date :</string>
    <string name="card">card View</string>
    <string name="select_date">Select Date</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="inox_movies">INOX Movies</string>
    <string name="pvr">PVR</string>
    <string name="city_pride">City Pride</string>
    <string name="abc_movies">ABC movies</string>
    <string name="jai_ganesh_inox">Jai Ganesh INOX</string>
    <string name="select_movie_theator">Select Movie Theator</string>

</resources>
