<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Booking_Details">


    <android.support.v7.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/booking_details"
            android:textSize="16sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/movie_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="13dp"
                android:layout_marginLeft="13dp"
                android:layout_marginTop="23dp"
                android:layout_marginEnd="19dp"
                android:layout_marginRight="19dp"
                android:layout_marginBottom="16dp"
                android:text="@string/movie_names"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/dates_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/movie_name"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:text="@string/date" />

            <TextView
                android:id="@+id/date_s"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/dates_text"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="13dp"
                android:layout_marginLeft="13dp"
                android:layout_marginEnd="207dp"
                android:layout_marginRight="207dp"
                android:layout_toEndOf="@+id/dates_text"
                android:layout_toRightOf="@+id/dates_text"
                android:text="@string/actual_date" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="136dp"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/movie_name"
                android:layout_alignLeft="@+id/movie_name"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="112dp"
                android:layout_marginEnd="203dp"
                android:layout_marginRight="203dp"
                android:text="@string/ticket_details"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />


            <Button
                android:id="@+id/book"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="0dp"
                android:text="@string/book" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="19dp"
                android:layout_marginLeft="19dp"
                android:layout_marginTop="147dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                android:text="Select Booking Details" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="19dp"
                android:layout_marginLeft="19dp"
                android:layout_marginTop="173dp"
                android:layout_marginEnd="13dp"
                android:layout_marginRight="13dp"
                android:entries="@array/booking_details" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="23dp"
                android:layout_marginLeft="23dp"
                android:layout_marginTop="243dp"
                android:layout_marginEnd="280dp"
                android:layout_marginRight="280dp"
                android:text="Amount" />

            <TextView
                android:id="@+id/total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/spinner"
                android:layout_alignEnd="@+id/movie_name"
                android:layout_alignBottom="@+id/textView9"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="275dp"
                android:layout_marginLeft="275dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:text="@string/amount" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView9"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="26dp"
                android:layout_marginLeft="26dp"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="268dp"
                android:layout_marginRight="268dp"
                android:layout_marginBottom="236dp"
                android:text="Tax" />

            <TextView
                android:id="@+id/amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/total"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="277dp"
                android:layout_marginLeft="277dp"
                android:layout_marginTop="19dp"
                android:layout_marginEnd="17dp"
                android:layout_marginRight="17dp"
                android:layout_marginBottom="234dp"
                android:text="18%" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView9"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="26dp"
                android:layout_marginLeft="26dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="248dp"
                android:layout_marginRight="248dp"
                android:layout_marginBottom="202dp"
                android:text="Total Amont" />

            <TextView
                android:id="@+id/total_amt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/textView14"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="-1dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:gravity="right"
                android:text="@string/total_amount" />


        </RelativeLayout>

    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>